--- a/views/random.erb
+++ b/views/random.erb
@@ -1,9 +1,9 @@
 <h1>Select Random number between two numbers</h1>
 <form action="/random/results">
-  <label for="number1">Enter a number</label>
-  <input id="number1" type="number" name="number1" placeholder="enter first number">
+  <label for="Minimum">Minimum</label>
+  <input id="Minimum" type="number" name="Minimum" placeholder="enter Minimum number">
 
-  <label for="number2">Enter a number</label>
-  <input id="number2" type="number" name="number2" placeholder="enter a second number">
+  <label for="Maximum">Maximum</label>
+  <input id="Maximum" type="number" name="Maximum" placeholder="enter Maximum number">
   <button>Pick Random Number</button>
 </form>
