--- a/views/random_results.erb
+++ b/views/random_results.erb
@@ -1,10 +1,10 @@
 <h1>Random Results</h1>
 <dl>
-<dt>Number 1:</dt>
-<dd> <%=@number1%></dd>
+<dt>Minimum:</dt>
+<dd> <%=@minimum%></dd>
 
-<dt>Number 2:</dt>
-<dd><%=@number2%></dd>
+<dt>Maximum:</dt>
+<dd><%=@maximum%></dd>
 
 <dt>Chosen number:</dt>
 <dd><%=@chosen_number%></dd>
